# mate-user-share

./: Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  libcaja-user-share.desktop.in.in  org.mate.FileSharing.gresource.xml  properties.ui
help/: Makefile.am
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  caja-share-bar.c  caja-share-bar.h  file-share-properties.c  http.c  http.h  obexftp.c  obexftp.h  obexpush.c  obexpush.h  share-extension.c  user_share-common.c  user_share-common.h  user_share-private.c  user_share-private.h  user_share.c
